# ima-evm-utils

./: .travis.yml  Makefile.am  README  build.sh  config-uml
.circleci/: config.yml
.github/workflows/: ci.yml
ci/: alpine.sh  alt.sh  debian.sh  fedora.sh  tumbleweed.sh
fsverity-utils/lib/: sign_digest.c
kernel-configs/: base  integrity  multiple-lsms
kernel-patches/: 0001-security-Add-TestLSM.patch
src/: evmctl.c  imaevm.h
tests/: Makefile.am  evm_command_line.test  evm_hash_algo_hmac.test  evm_hmac.test  evm_hmac_non_enabled_xattrs.test  evm_multiple_lsms.test  fsverity.test  functions.sh  ima_meta_immutable.test  ima_policies.test  ima_policy_check.awk  ima_policy_check.test  ima_skip_measurement_audit.test  install-fsverity.sh  install-mount-idmapped.sh  install-openssl3.sh  mmap_check.test  portable_signatures.test  test_mmap.c  verify_evmsig.test
travis/: alpine.sh  debian.sh  fedora.sh  tumbleweed.sh
